# adobo

./: .gitignore  Cargo.toml  PROJECT.md  README.md  adobo.txt  build.rs  buttons-lag.txt  cache-lru.txt  convert.ps1  dump_legal.py  dump_pages.py  dump_pdf.py  filtering.txt  fix_poll.ps1  fix_poll2.ps1  fix_welcome.ps1  inspect_accents.py  inspect_pdf.py  inspect_text.py  instalar.bat  install.ps1  page_0.txt  page_1.txt  page_2.txt  page_3.txt  page_4.txt  page_5.txt  page_6.txt  page_7.txt  page_8.txt  page_9.txt  patch.py  proyecto.txt  run_log.txt  run_log2.txt  sesgo.txt  solucion-scroll.txt  test_logo.rs
.agents/: ORIGINAL_REQUEST.md
.agents/explorer_1_1/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  progress.md
.agents/explorer_1_2/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  progress.md
.agents/explorer_1_2/scratch/: Cargo.toml
.agents/explorer_1_2/scratch/src/: main.rs
.agents/explorer_1_3/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  progress.md
.agents/implementer_1/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/orchestrator/: BRIEFING.md  context.md  plan.md  progress.md
.agents/sentinel/: BRIEFING.md  handoff.md
src/: app.manifest  db.rs  gui.rs  gui_vello.rs  installer.cs  interpreter.rs  lib.rs  main.rs  object.rs  parser.rs  test.rs  uninstaller.cs  welcome.rs
