[package]
name = "ufreader"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.32"
encoding_rs = "0.8.35"
flate2 = "1.1.9"
kurbo = "0.13.1"
memmap2 = "0.9.10"
pollster = "0.4.0"
rayon = "1.12.0"
softbuffer = "0.4.8"
tiny-skia = "0.12.0"
vello = "0.9.0"
peniko = "0.6.1"
winit = "0.30.13"
rfd = "0.17.2"
redb = "4.1.0"
serde_json = "1.0.150"
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0.0"
image = "0.25.10"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[build-dependencies]
winres = "0.1"
